<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleLabel2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#E91E63"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFFFF" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/main_icon"
            android:layout_height="@dimen/main_icon"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_description"
            android:padding="16dp"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/fullNamePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints="@string/prompt_full_name"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/prompt_full_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/usernamePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints="@string/prompt_user"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/prompt_user"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/passwordPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="16dp"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/custom_button"
            android:enabled="true"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>